@@ -1,3 +1,11 @@
+2007-11-30 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/GrampsCfg.py: rel media path entry box
+	* src/gen/db/base.py: methods for access
+	* src/gen/db/dbdir.py: storage in BSDDB
+	* src/GrampsDb/_GrampsDbWriteXML.py: write in header
+	* src/GrampsDbUtils/_ReadXML.py: read relative path
+	Start of adding relative media path to database
+
 2007-11-29  Dougas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/Editors/_EditFamily.py: reverse surname guess for father
 
